2006-??-?? : 1.4
	std : added a SO_REUSEADDR before socket_bind
	nekoc/nekovm : allowed more than 127 filenames in debug infos
	nekotools server : added -rewrite for mod_rewrite'style urls
	added zlib wrapper
	mod_neko for apache 2.0
	added sqlite wrapper
	(planned) continuations
	(planned) efficient JIT
	(todo) think about abstract kinds declaration and interop

2006-05-11 : 1.3
	neko : fixed endianness bug needed to boot, exported neko_is_big_endian
	neko : fixed bug on Linux x86 gcc with object operators (eax get overwritten)
	neko : fixed bug : error when __string or __compare does not exist
	neko : allowed runtime printer redirection (+ added std@print_redirect)
	neko : defined a default NEKOPATH when not specified (less configuration)
	neko : fixed int32 calculus bug (need_32_bits macro)
	neko : fixed calls with a lot of arguments (some cases were failing)
	neko : fixed preservation of 'this' through tailcall, if changed inside the call
	neko : added unary operator minus parsing
	neko : fixed error reporting of unclosed parenthesis
	nekoml : added Net core module for sockets
	nekoml : when catching Neko errors, wrap them using Neko_error constructor
	std : supported serialization of C primitives and __serialize/__unserialize overrides
	added nekotools (merged nekoboot and neko webserver)
	std : fixed math_round, fixed math docs
	std : fixed bug in utf8_resize, utf8_get and utf8_iter.
	regexp : added regexp_new_options for matching options and regexp_replace_fun
	regexp : fixed invalid matched length when not index 0
	added some benchmarks in src/benchs
	neko : fixed $ablit and $sblit (when used with same array/string)
	neko : fixed multithread win32 support
	mod_neko : changed Content-Type handling for POST data
	std : added blocking sockets support
	std : changed sys_time to sys_cpu_time, added sys_time (local time).
	std : fixed put_env on Linux (GC issue)
	cleanup of some stuff needed by experimental JIT
	std : added memory module
	
2006-01-09 : 1.2